--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -692,6 +692,7 @@
     "toolPool.message.unavailable": "This tool is unavailable",
     "toolPool.tag.mcp": "MCP Tool",
     "toolPool.tag.local": "Local Tool",
+    "toolPool.tag.langchain": "LangChain Tool",
     "toolPool.error.requiredFields": "The following required fields are not filled: {{fields}}",
     "businessLogic.config.model": "Model",
     "businessLogic.config.maxSteps": "Max Steps",
