🎨 Improve UI font size and title display

--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -531,7 +531,7 @@
     "setup.header.status.unknown": "Unknown Status",
     "setup.header.button.back": "Back to Home",
     "setup.header.title": "Quick Setup",
-    "setup.header.description": "Precise answers to every question, efficient support for every decision",
+    "setup.header.description": "Smartly build any assistant, accurately solve every challenge",
     "setup.header.tooltip.lastChecked": "Last checked: {{time}}",
     "setup.header.tooltip.checkStatus": "Click to check connection status",
     "setup.navigation.button.previous": "Previous",
