--- a/frontend/public/locales/zh/common.json
+++ b/frontend/public/locales/zh/common.json
@@ -531,7 +531,7 @@
     "setup.header.status.unknown": "未知状态",
     "setup.header.button.back": "返回首页",
     "setup.header.title": "快速配置",
-    "setup.header.description": "精准解答每一个问题，高效支撑每一次决策",
+    "setup.header.description": "智能生成每一种助手，精准解决每一个问题",
     "setup.header.tooltip.lastChecked": "上次检查: {{time}}",
     "setup.header.tooltip.checkStatus": "点击检查连接状态",
     "setup.navigation.button.previous": "上一步",
@@ -678,7 +678,7 @@
     "tool.error.updateRetry": "更新工具状态失败，请稍后重试",
     "model.option.main": "主模型",
     "model.option.sub": "副模型",
-    "subAgentPool.title": "该 Agent 需要哪些子 Agent",
+    "subAgentPool.title": "该 Agent 允许调用哪些 Agent",
     "subAgentPool.loading": "加载中...",
     "subAgentPool.button.create": "创建Agent",
     "subAgentPool.button.import": "导入Agent",
