--- a/frontend/public/locales/zh/common.json
+++ b/frontend/public/locales/zh/common.json
@@ -300,9 +300,13 @@
     "systemPrompt.message.empty": "请先生成系统提示词",
     "systemPrompt.message.noAgentId": "无法保存提示词：未指定Agent ID",
     "systemPrompt.message.emptyTuning": "请输入微调指令",
-    "systemPrompt.card.duty.title": "Agent介绍",
+    "systemPrompt.card.duty.title": "Agent角色",
     "systemPrompt.card.constraint.title": "使用要求",
     "systemPrompt.card.fewShots.title": "示例",
+    "systemPrompt.empty.title": "Agent待生成",
+    "systemPrompt.empty.subtitle": "点击生成智能体，或者手动编辑（可点击）",
+    "systemPrompt.empty.smartGenerate": "生成智能体",
+    "systemPrompt.empty.manualEdit": "手动编辑",
     "toolConfig.source.mcp": "MCP",
     "toolConfig.source.local": "本地工具",
     "toolConfig.title.paramConfig": "参数配置",
@@ -697,7 +701,7 @@
     "toolPool.error.requiredFields": "以下必填字段未填写: {{fields}}",
     "businessLogic.config.model": "模型",
     "businessLogic.config.maxSteps": "最大步骤数",
-    "businessLogic.config.button.generatePrompt": "智能生成提示词",
+    "businessLogic.config.button.generatePrompt": "生成智能体",
     "businessLogic.config.button.generating": "智能生成提示词中...",
     "businessLogic.config.button.save": "保存",
     "businessLogic.config.button.saving": "保存中...",
