✨Supports the import and use of LangChain tools.

--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -309,6 +309,7 @@
     "systemPrompt.empty.manualEdit": "Manual Edit",
     "toolConfig.source.mcp": "MCP",
     "toolConfig.source.local": "Local Tool",
+    "toolPool.source.langchain": "LangChain Tool",
     "toolConfig.title.paramConfig": "Parameter Configuration",
     "toolConfig.message.loadError": "Failed to load tool configuration",
     "toolConfig.message.loadErrorUseDefault": "Failed to load tool configuration, using default configuration",
