--- a/frontend/public/locales/zh/common.json
+++ b/frontend/public/locales/zh/common.json
@@ -307,8 +307,9 @@
     "systemPrompt.empty.subtitle": "点击生成智能体，或者手动编辑（可点击）",
     "systemPrompt.empty.smartGenerate": "生成智能体",
     "systemPrompt.empty.manualEdit": "手动编辑",
-    "toolConfig.source.mcp": "MCP",
+    "toolConfig.source.mcp": "MCP工具",
     "toolConfig.source.local": "本地工具",
+    "toolPool.source.langchain": "LangChain工具",
     "toolConfig.title.paramConfig": "参数配置",
     "toolConfig.message.loadError": "加载工具配置失败",
     "toolConfig.message.loadErrorUseDefault": "加载工具配置失败，使用默认配置",
