♻️ frontend refactor: move agent info to prompt area

--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -260,6 +260,7 @@
     "agent.info.provideSummary.hint": "When enabled, the agent will provide an execution summary upon completion",
     "guide.title.mainAgent": "Main Agent Configuration",
     "guide.title.subAgent": "Sub-Agent Configuration",
+    "guide.title.agentConfig": "Agent Configuration Guide",
     "guide.steps.normal.selectAgent.title": "Select Agent",
     "guide.steps.normal.selectAgent.description": "Select required agents from the agent pool",
     "guide.steps.normal.selectTools.title": "Select Tools",
@@ -284,7 +285,11 @@
     "guide.steps.creating.debugAgent.description": "Input questions to debug current agent",
     "guide.steps.creating.saveAgent.title": "Save Agent",
     "guide.steps.creating.saveAgent.description": "Configure and save to agent pool",
-    "agent.title": "Agent",
+    "agent.title": "智能体",
+    "agent.name": "Agent Name",
+    "agent.namePlaceholder": "Please enter agent name",
+    "agent.description": "Agent Description",
+    "agent.descriptionPlaceholder": "Please enter agent description",
     "systemPrompt.button.save": "Save",
     "systemPrompt.button.close": "Close",
     "systemPrompt.button.tune": "Tune",
@@ -307,6 +312,8 @@
     "systemPrompt.empty.subtitle": "Click to generate agent or manually edit (clickable)",
     "systemPrompt.empty.smartGenerate": "Generate Agent",
     "systemPrompt.empty.manualEdit": "Manual Edit",
+    "systemPrompt.nonEditing.title": "Please Enter Edit Mode First",
+    "systemPrompt.nonEditing.subtitle": "Please select an Agent to edit or create a new Agent",
     "toolConfig.source.mcp": "MCP",
     "toolConfig.source.local": "Local Tool",
     "toolConfig.title.paramConfig": "Parameter Configuration",
@@ -332,7 +339,7 @@
     "agent.error.fetchAgentListRetry": "Failed to get agent list, please try again later",
     "agent.debug.title": "Agent Debug",
     "common.model": "Model",
-    "common.maxSteps": "Maximum Steps",
+    "common.maxSteps": "Maximum Steps of Agent Run",
     "common.loading": "Loading",
     "common.saving": "Saving...",
     "common.save": "Save",
@@ -682,30 +689,45 @@
     "tool.error.updateRetry": "Failed to update tool status, please try again later",
     "model.option.main": "Main Model",
     "model.option.sub": "Sub Model",
-    "subAgentPool.title": "Choose the sub-agents for this agent",
+    "subAgentPool.title": "Select Agent to Edit",
+    "subAgentPool.title.editing": "Currently editing {{name}}",
+    "subAgentPool.title.creating": "Currently creating new agent",
     "subAgentPool.loading": "Loading...",
     "subAgentPool.button.create": "Create Agent",
     "subAgentPool.button.import": "Import Agent",
     "subAgentPool.button.importing": "Importing...",
     "subAgentPool.message.unavailable": "This Agent is unavailable",
+    "subAgentPool.message.noParentAgent": "Cannot establish relationship: missing parent agent information",
+    "subAgentPool.message.relationAdded": "Relationship added successfully",
+    "subAgentPool.message.relationRemoved": "Relationship removed successfully",
+    "subAgentPool.message.relationAddFailed": "Failed to add relationship",
+    "subAgentPool.message.relationRemoveFailed": "Failed to remove relationship",
+    "subAgentPool.message.operationFailed": "Operation failed, please try again later",
+    "subAgentPool.message.viewOnlyMode": "Currently in view mode, cannot select Agent",
     "subAgentPool.tooltip.disabledAgent": "This Agent is disabled, click to cancel activation",
     "subAgentPool.tooltip.unavailableAgent": "Agent is unavailable",
+    "subAgentPool.tooltip.viewOnlyMode": "View mode, cannot select Agent",
+    "subAgentPool.tooltip.notInEditMode": "Please enter edit mode to select agents",
     "toolPool.title": "Select tools",
     "toolPool.loading": "Loading...",
     "toolPool.loadingTools": "Loading tools...",
     "toolPool.tooltip.disabledTool": "This tool is disabled, click to cancel activation",
     "toolPool.tooltip.unavailableTool": "Tool is unavailable",
+    "toolPool.tooltip.viewOnlyMode": "View mode, cannot select tools",
     "toolPool.message.unavailable": "This tool is unavailable",
+    "toolPool.message.viewOnlyMode": "Currently in view mode, cannot select tools",
     "toolPool.tag.mcp": "MCP Tool",
     "toolPool.tag.local": "Local Tool",
     "toolPool.error.requiredFields": "The following required fields are not filled: {{fields}}",
     "businessLogic.config.model": "Model",
-    "businessLogic.config.maxSteps": "Max Steps",
+    "businessLogic.config.maxSteps": "Max Steps of Agent Run",
     "businessLogic.config.button.generatePrompt": "Generate",
     "businessLogic.config.button.generating": "Generating...",
     "businessLogic.config.button.save": "Save",
+    "businessLogic.config.button.saveToAgentPool": "Save to Agent Pool",
     "businessLogic.config.button.saving": "Saving...",
     "businessLogic.config.button.cancel": "Cancel",
+    "businessLogic.config.button.exitEdit": "Exit Edit",
     "businessLogic.config.modal.deleteTitle": "Confirm Delete",
     "businessLogic.config.modal.deleteContent": "Are you sure you want to delete this agent? This action cannot be undone.",
     "businessLogic.config.modal.button.cancel": "Cancel",
@@ -720,6 +742,8 @@
     "businessLogic.config.message.promptGenerateSuccess": "Prompt generated successfully",
     "businessLogic.config.message.completeAgentInfo": "Please complete the agent information",
     "businessLogic.config.message.generatePromptFirst": "Please generate the system prompt first",
+    "businessLogic.config.message.generateSuccess": "Agent prompt generated successfully",
+    "businessLogic.config.message.generateError": "Failed to generate agent prompt",
     "businessLogic.config.message.noAgentSelected": "Please ensure no agent is selected",
     "businessLogic.config.error.noAgentId": "Cannot continue: Agent ID is not set",
     "businessLogic.config.error.nameEmpty": "Agent name cannot be empty",
@@ -739,10 +763,12 @@
     "businessLogic.config.error.agentDeleteSuccess": "Agent delete success",
     "businessLogic.config.error.invalidFileType": "Invalid file type, please check the JSON format",
     "businessLogic.config.error.agentListFailed": "Failed to get agent list",
+    "businessLogic.config.message.agentListLoaded": "Agent list loaded",
     "businessLogic.config.error.agentExportFailed": "Failed to export agent",
     "businessLogic.config.message.agentExportSuccess": "Agent export success",
     "businessLogic.config.error.agentIdFailed": "Failed to get new agent ID",
     "businessLogic.config.error.agentDetailFailed": "Failed to get agent detail",
+    "businessLogic.config.message.agentDetailLoaded": "Agent detail loaded",
     "businessLogic.config.error.agentUpdateFailed": "Agent update failed",
     "businessLogic.config.error.agentUpdateRetry": "Agent update failed, please try again later",
     "businessLogic.config.error.agentUpdateSuccess": "Agent update success",
@@ -752,6 +778,8 @@
     "businessLogic.config.message.agentDeleteFailed": "Agent delete failed",
     "businessLogic.config.message.agentDeleteRetry": "Agent delete failed, please try again later",
     "businessLogic.config.message.agentDeleteConfirm": "Are you sure you want to delete this agent? This action cannot be undone.",
+    "businessLogic.nonEditing.title": "Please Enter Edit Mode First",
+    "businessLogic.nonEditing.subtitle": "Please select an Agent to edit or create a new Agent",
     "model.validation.MODEL_VALIDATION_SUCCESS": "Model connectivity validation successful",
     "model.validation.MODEL_VALIDATION_FAILED": "Model connectivity validation failed",
     "model.validation.MODEL_VALIDATION_ERROR": "Model validation error",
