--- a/frontend/public/locales/zh/common.json
+++ b/frontend/public/locales/zh/common.json
@@ -260,6 +260,7 @@
     "agent.info.provideSummary.hint": "开启后Agent执行完成时会提供运行摘要",
     "guide.title.mainAgent": "主Agent配置",
     "guide.title.subAgent": "子Agent配置",
+    "guide.title.agentConfig": "Agent配置引导",
     "guide.steps.normal.selectAgent.title": "选择Agent",
     "guide.steps.normal.selectAgent.description": "从Agent池中选择需要的Agent",
     "guide.steps.normal.selectTools.title": "选择工具",
@@ -284,7 +285,11 @@
     "guide.steps.creating.debugAgent.description": "输入问题调试当前Agent",
     "guide.steps.creating.saveAgent.title": "保存Agent",
     "guide.steps.creating.saveAgent.description": "配置并保存到Agent池",
-    "agent.title": "智能体",
+    "agent.title": "Agent",
+    "agent.name": "Agent名称",
+    "agent.namePlaceholder": "请输入Agent名称",
+    "agent.description": "Agent描述",
+    "agent.descriptionPlaceholder": "请输入Agent描述",
     "systemPrompt.button.save": "保存",
     "systemPrompt.button.close": "关闭",
     "systemPrompt.button.tune": "微调",
@@ -307,6 +312,8 @@
     "systemPrompt.empty.subtitle": "点击生成智能体，或者手动编辑（可点击）",
     "systemPrompt.empty.smartGenerate": "生成智能体",
     "systemPrompt.empty.manualEdit": "手动编辑",
+    "systemPrompt.nonEditing.title": "请先进入编辑模式",
+    "systemPrompt.nonEditing.subtitle": "请先选择一个Agent进行编辑，或创建新的Agent",
     "toolConfig.source.mcp": "MCP",
     "toolConfig.source.local": "本地工具",
     "toolConfig.title.paramConfig": "参数配置",
@@ -332,7 +339,7 @@
     "agent.error.fetchAgentListRetry": "获取Agent列表失败，请稍后重试",
     "agent.debug.title": "Agent调试",
     "common.model": "模型",
-    "common.maxSteps": "最大步骤数",
+    "common.maxSteps": "Agent运行最大步骤数",
     "common.loading": "加载中",
     "common.saving": "保存中...",
     "common.save": "保存",
@@ -682,30 +689,45 @@
     "tool.error.updateRetry": "更新工具状态失败，请稍后重试",
     "model.option.main": "主模型",
     "model.option.sub": "副模型",
-    "subAgentPool.title": "该 Agent 允许调用哪些 Agent",
+    "subAgentPool.title": "选择Agent进行编辑",
+    "subAgentPool.title.editing": "当前正在编辑{{name}}",
+    "subAgentPool.title.creating": "当前正在新建agent",
     "subAgentPool.loading": "加载中...",
     "subAgentPool.button.create": "创建Agent",
     "subAgentPool.button.import": "导入Agent",
     "subAgentPool.button.importing": "导入中...",
     "subAgentPool.message.unavailable": "该Agent不可用",
+    "subAgentPool.message.noParentAgent": "无法建立关联关系：缺少父Agent信息",
+    "subAgentPool.message.relationAdded": "关联关系已添加",
+    "subAgentPool.message.relationRemoved": "关联关系已移除",
+    "subAgentPool.message.relationAddFailed": "添加关联关系失败",
+    "subAgentPool.message.relationRemoveFailed": "移除关联关系失败",
+    "subAgentPool.message.operationFailed": "操作失败，请稍后重试",
+    "subAgentPool.message.viewOnlyMode": "当前为查看模式，无法选择Agent",
     "subAgentPool.tooltip.disabledAgent": "该Agent已禁用，请点击取消启用",
     "subAgentPool.tooltip.unavailableAgent": "Agent不可用",
+    "subAgentPool.tooltip.viewOnlyMode": "查看模式，无法选择Agent",
+    "subAgentPool.tooltip.notInEditMode": "请先进入编辑模式才能选择Agent",
     "toolPool.title": "选择 Agent 的工具",
     "toolPool.loading": "加载中...",
     "toolPool.loadingTools": "加载工具中...",
     "toolPool.tooltip.disabledTool": "该工具已禁用，请点击取消启用",
     "toolPool.tooltip.unavailableTool": "工具不可用",
+    "toolPool.tooltip.viewOnlyMode": "查看模式，无法选择工具",
     "toolPool.message.unavailable": "该工具不可用",
+    "toolPool.message.viewOnlyMode": "当前为查看模式，无法选择工具",
     "toolPool.tag.mcp": "MCP工具",
     "toolPool.tag.local": "本地工具",
     "toolPool.error.requiredFields": "以下必填字段未填写: {{fields}}",
     "businessLogic.config.model": "模型",
-    "businessLogic.config.maxSteps": "最大步骤数",
+    "businessLogic.config.maxSteps": "Agent运行最大步骤数",
     "businessLogic.config.button.generatePrompt": "生成智能体",
     "businessLogic.config.button.generating": "智能生成提示词中...",
     "businessLogic.config.button.save": "保存",
+    "businessLogic.config.button.saveToAgentPool": "保存到agent池",
     "businessLogic.config.button.saving": "保存中...",
     "businessLogic.config.button.cancel": "取消",
+    "businessLogic.config.button.exitEdit": "退出编辑",
     "businessLogic.config.modal.deleteTitle": "确认删除",
     "businessLogic.config.modal.deleteContent": "确定要删除Agent {{name}} 吗？此操作不可恢复。",
     "businessLogic.config.modal.button.cancel": "取消",
@@ -720,6 +742,8 @@
     "businessLogic.config.message.promptGenerateSuccess": "提示词生成成功",
     "businessLogic.config.message.completeAgentInfo": "请完善Agent信息",
     "businessLogic.config.message.generatePromptFirst": "请先生成系统提示词",
+    "businessLogic.config.message.generateSuccess": "智能体提示词生成成功",
+    "businessLogic.config.message.generateError": "智能体提示词生成失败",
     "businessLogic.config.message.noAgentSelected": "请确保未选择Agent",
     "businessLogic.config.error.noAgentId": "无法继续：未设置Agent ID",
     "businessLogic.config.error.nameEmpty": "Agent名称不能为空",
@@ -739,10 +763,12 @@
     "businessLogic.config.error.agentDeleteSuccess": "Agent删除成功",
     "businessLogic.config.error.invalidFileType": "文件类型错误，请检查JSON格式",
     "businessLogic.config.error.agentListFailed": "获取Agent列表失败",
+    "businessLogic.config.message.agentListLoaded": "Agent列表已加载",
     "businessLogic.config.error.agentExportFailed": "Agent导出失败",
     "businessLogic.config.message.agentExportSuccess": "Agent导出成功",
     "businessLogic.config.error.agentIdFailed": "获取新Agent ID失败",
     "businessLogic.config.error.agentDetailFailed": "获取Agent详情失败",
+    "businessLogic.config.message.agentDetailLoaded": "Agent详情已加载",
     "businessLogic.config.error.agentUpdateFailed": "Agent更新失败",
     "businessLogic.config.error.agentUpdateRetry": "Agent更新失败，请稍后重试",
     "businessLogic.config.error.agentUpdateSuccess": "Agent更新成功",
@@ -888,5 +914,7 @@
         "noAvailableAgents": "暂无可用Agent",
         "unavailable": "不可用",
         "agentUnavailable": "此Agent当前不可用，请检查工具配置信息或通知管理员。"
-    }
+    },
+    "businessLogic.nonEditing.title": "请先进入编辑模式",
+    "businessLogic.nonEditing.subtitle": "请先选择一个Agent进行编辑，或创建新的Agent"
 }
