♻️ frontend refactor: move agent info to prompt area

--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -261,35 +261,25 @@
     "guide.title.mainAgent": "Main Agent Configuration",
     "guide.title.subAgent": "Sub-Agent Configuration",
     "guide.title.agentConfig": "Agent Configuration Guide",
-    "guide.steps.normal.selectAgent.title": "Select Agent",
-    "guide.steps.normal.selectAgent.description": "Select required agents from the agent pool",
-    "guide.steps.normal.selectTools.title": "Select Tools",
-    "guide.steps.normal.selectTools.description": "Select required tools from the tool pool",
-    "guide.steps.normal.describeBusiness.title": "Describe Business",
-    "guide.steps.normal.describeBusiness.description": "Input business scenario and requirements",
-    "guide.steps.normal.generatePrompt.title": "Generate Prompt",
-    "guide.steps.normal.generatePrompt.description": "Generate and fine-tune system prompt",
-    "guide.steps.normal.debugAgent.title": "Debug Agent",
-    "guide.steps.normal.debugAgent.description": "Input questions to debug main agent",
-    "guide.steps.normal.complete.title": "Complete Setup",
-    "guide.steps.normal.complete.description": "Click to complete setup and start Q&A",
-    "guide.steps.creating.basicInfo.title": "Basic Information",
-    "guide.steps.creating.basicInfo.description": "Fill in name, description and other basic information",
-    "guide.steps.creating.selectTools.title": "Select Tools",
-    "guide.steps.creating.selectTools.description": "Select required tools from the tool pool",
-    "guide.steps.creating.describeBusiness.title": "Describe Business",
-    "guide.steps.creating.describeBusiness.description": "Input business scenario and requirements",
-    "guide.steps.creating.generatePrompt.title": "Generate Prompt",
-    "guide.steps.creating.generatePrompt.description": "Generate and fine-tune system prompt",
-    "guide.steps.creating.debugAgent.title": "Debug Agent",
-    "guide.steps.creating.debugAgent.description": "Input questions to debug current agent",
-    "guide.steps.creating.saveAgent.title": "Save Agent",
-    "guide.steps.creating.saveAgent.description": "Configure and save to agent pool",
+
+    "guide.steps.createOrEditAgent.title": "Create/Edit Agent",
+    "guide.steps.createOrEditAgent.description": "Enter edit mode for creating or modifying agent",
+    "guide.steps.selectCollaborativeAgent.title": "Select Collaborative Agent",
+    "guide.steps.selectCollaborativeAgent.description": "Select collaborative agents (optional)",
+    "guide.steps.selectTools.title": "Select Tools",
+    "guide.steps.selectTools.description": "Select tools to use",
+    "guide.steps.describeBusinessLogic.title": "Describe Business Logic",
+    "guide.steps.describeBusinessLogic.description": "Describe business scenario and requirements",
+    "guide.steps.generateAndDebug.title": "Generate and Debug Agent",
+    "guide.steps.generateAndDebug.description": "Generate intelligent agent and debug",
+    "guide.steps.completeCreation.title": "Complete Creation/Modification",
+    "guide.steps.completeCreation.description": "Complete agent creation or modification",
     "agent.title": "智能体",
     "agent.name": "Agent Name",
     "agent.namePlaceholder": "Please enter agent name",
     "agent.description": "Agent Description",
     "agent.descriptionPlaceholder": "Please enter agent description",
+    "agent.detailContent.title": "Agent Detail Content",
     "systemPrompt.button.save": "Save",
     "systemPrompt.button.close": "Close",
     "systemPrompt.button.tune": "Tune",
@@ -312,8 +302,11 @@
     "systemPrompt.empty.subtitle": "Click to generate agent or manually edit (clickable)",
     "systemPrompt.empty.smartGenerate": "Generate Agent",
     "systemPrompt.empty.manualEdit": "Manual Edit",
-    "systemPrompt.nonEditing.title": "Please Enter Edit Mode First",
-    "systemPrompt.nonEditing.subtitle": "Please select an Agent to edit or create a new Agent",
+    "systemPrompt.nonEditing.title": "Please Select an Agent First",
+    "systemPrompt.nonEditing.subtitle": "Please select an Agent from the left panel to edit, or create a new Agent",
+    "collaborativeAgent.nonEditing.title": "Please Select an Agent First",
+    "collaborativeAgent.nonEditing.subtitle": "Configure collaborative agents after selecting an agent",
+    "subAgentPool.button.exitCreate": "Exit Create",
     "toolConfig.source.mcp": "MCP",
     "toolConfig.source.local": "Local Tool",
     "toolConfig.title.paramConfig": "Parameter Configuration",
@@ -719,6 +712,7 @@
     "toolPool.tag.mcp": "MCP Tool",
     "toolPool.tag.local": "Local Tool",
     "toolPool.error.requiredFields": "The following required fields are not filled: {{fields}}",
+    "businessLogic.config.title": "Configure Agent Capabilities",
     "businessLogic.config.model": "Model",
     "businessLogic.config.maxSteps": "Max Steps of Agent Run",
     "businessLogic.config.button.generatePrompt": "Generate",
@@ -917,5 +911,29 @@
         "noAvailableAgents": "No available agents",
         "unavailable": "Unavailable",
         "agentUnavailable": "This agent is currently unavailable, please check the tool configuration information or contact the administrator"
+    },
+    "collaborativeAgent": {
+        "title": "Collaborative Agent",
+        "button": {
+            "add": "Add Collaborative Agent"
+        },
+        "empty": {
+            "title": "No collaborative agents",
+            "description": "Click the add button to select collaborative agents"
+        },
+        "select": {
+            "placeholder": "Please select an agent",
+            "noOptions": "No available agents to select"
+        },
+        "message": {
+            "selectAgentFirst": "Please select an agent first",
+            "addSuccess": "Collaborative agent added successfully",
+            "addFailed": "Failed to add collaborative agent",
+            "removeSuccess": "Collaborative agent removed successfully",
+            "removeFailed": "Failed to remove collaborative agent",
+            "noParentAgent": "No parent agent available",
+            "notInEditMode": "Please enter edit mode first",
+            "generatingInProgress": "Agent generation in progress, please wait"
+        }
     }
 }
