--- a/frontend/public/locales/zh/common.json
+++ b/frontend/public/locales/zh/common.json
@@ -261,35 +261,25 @@
     "guide.title.mainAgent": "主Agent配置",
     "guide.title.subAgent": "子Agent配置",
     "guide.title.agentConfig": "Agent配置引导",
-    "guide.steps.normal.selectAgent.title": "选择Agent",
-    "guide.steps.normal.selectAgent.description": "从Agent池中选择需要的Agent",
-    "guide.steps.normal.selectTools.title": "选择工具",
-    "guide.steps.normal.selectTools.description": "从工具池中选择需要的工具",
-    "guide.steps.normal.describeBusiness.title": "描述业务",
-    "guide.steps.normal.describeBusiness.description": "输入业务场景和需求描述",
-    "guide.steps.normal.generatePrompt.title": "生成提示词",
-    "guide.steps.normal.generatePrompt.description": "生成系统提示词并微调",
-    "guide.steps.normal.debugAgent.title": "调试Agent",
-    "guide.steps.normal.debugAgent.description": "输入问题调试主Agent",
-    "guide.steps.normal.complete.title": "完成配置",
-    "guide.steps.normal.complete.description": "点击完成配置开始问答",
-    "guide.steps.creating.basicInfo.title": "填写基础信息",
-    "guide.steps.creating.basicInfo.description": "填写名称、描述等基础信息",
-    "guide.steps.creating.selectTools.title": "选择工具",
-    "guide.steps.creating.selectTools.description": "从工具池中选择需要的工具",
-    "guide.steps.creating.describeBusiness.title": "描述业务",
-    "guide.steps.creating.describeBusiness.description": "输入业务场景和需求描述",
-    "guide.steps.creating.generatePrompt.title": "生成提示词",
-    "guide.steps.creating.generatePrompt.description": "生成系统提示词并微调",
-    "guide.steps.creating.debugAgent.title": "调试Agent",
-    "guide.steps.creating.debugAgent.description": "输入问题调试当前Agent",
-    "guide.steps.creating.saveAgent.title": "保存Agent",
-    "guide.steps.creating.saveAgent.description": "配置并保存到Agent池",
+
+    "guide.steps.createOrEditAgent.title": "新建/修改Agent",
+    "guide.steps.createOrEditAgent.description": "用于进入编辑模式",
+    "guide.steps.selectCollaborativeAgent.title": "选择协作Agent",
+    "guide.steps.selectCollaborativeAgent.description": "选择协作Agent（可选）",
+    "guide.steps.selectTools.title": "选择使用工具",
+    "guide.steps.selectTools.description": "选择使用工具",
+    "guide.steps.describeBusinessLogic.title": "描述业务逻辑",
+    "guide.steps.describeBusinessLogic.description": "描述业务场景和需求",
+    "guide.steps.generateAndDebug.title": "生成智能体并调试",
+    "guide.steps.generateAndDebug.description": "生成智能体并调试",
+    "guide.steps.completeCreation.title": "完成创建或修改",
+    "guide.steps.completeCreation.description": "完成创建或修改",
     "agent.title": "Agent",
     "agent.name": "Agent名称",
     "agent.namePlaceholder": "请输入Agent名称",
     "agent.description": "Agent描述",
     "agent.descriptionPlaceholder": "请输入Agent描述",
+    "agent.detailContent.title": "Agent详细内容",
     "systemPrompt.button.save": "保存",
     "systemPrompt.button.close": "关闭",
     "systemPrompt.button.tune": "微调",
@@ -312,8 +302,11 @@
     "systemPrompt.empty.subtitle": "点击生成智能体，或者手动编辑（可点击）",
     "systemPrompt.empty.smartGenerate": "生成智能体",
     "systemPrompt.empty.manualEdit": "手动编辑",
-    "systemPrompt.nonEditing.title": "请先进入编辑模式",
-    "systemPrompt.nonEditing.subtitle": "请先选择一个Agent进行编辑，或创建新的Agent",
+    "systemPrompt.nonEditing.title": "请先选择一个Agent",
+    "systemPrompt.nonEditing.subtitle": "请从左侧选择一个Agent进行编辑，或创建新的Agent",
+    "collaborativeAgent.nonEditing.title": "请先选择一个Agent",
+    "collaborativeAgent.nonEditing.subtitle": "选择Agent后可配置协作Agent",
+    "subAgentPool.button.exitCreate": "退出创建",
     "toolConfig.source.mcp": "MCP",
     "toolConfig.source.local": "本地工具",
     "toolConfig.title.paramConfig": "参数配置",
@@ -719,6 +712,7 @@
     "toolPool.tag.mcp": "MCP工具",
     "toolPool.tag.local": "本地工具",
     "toolPool.error.requiredFields": "以下必填字段未填写: {{fields}}",
+    "businessLogic.config.title": "配置Agent能力",
     "businessLogic.config.model": "模型",
     "businessLogic.config.maxSteps": "Agent运行最大步骤数",
     "businessLogic.config.button.generatePrompt": "生成智能体",
@@ -914,6 +908,30 @@
         "noAvailableAgents": "暂无可用Agent",
         "unavailable": "不可用",
         "agentUnavailable": "此Agent当前不可用，请检查工具配置信息或通知管理员。"
+    },
+    "collaborativeAgent": {
+        "title": "协作Agent",
+        "button": {
+            "add": "添加协作Agent"
+        },
+        "empty": {
+            "title": "暂无协作Agent",
+            "description": "点击添加按钮选择协作Agent"
+        },
+        "select": {
+            "placeholder": "请选择Agent",
+            "noOptions": "暂无可选择的Agent"
+        },
+        "message": {
+            "selectAgentFirst": "请先选择一个Agent",
+            "addSuccess": "协作Agent添加成功",
+            "addFailed": "协作Agent添加失败",
+            "removeSuccess": "协作Agent移除成功",
+            "removeFailed": "协作Agent移除失败",
+            "noParentAgent": "没有可用的父Agent",
+            "notInEditMode": "请先进入编辑模式",
+            "generatingInProgress": "Agent生成中，请稍候"
+        }
     },
     "businessLogic.nonEditing.title": "请先进入编辑模式",
     "businessLogic.nonEditing.subtitle": "请先选择一个Agent进行编辑，或创建新的Agent"
