--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -263,17 +263,17 @@
     "guide.title.agentConfig": "Agent Configuration Guide",
 
     "guide.steps.createOrEditAgent.title": "Create/Edit Agent",
-    "guide.steps.createOrEditAgent.description": "Enter edit mode for creating or modifying agent",
-    "guide.steps.selectCollaborativeAgent.title": "Select Collaborative Agent",
-    "guide.steps.selectCollaborativeAgent.description": "Select collaborative agents (optional)",
+    "guide.steps.createOrEditAgent.description": "Used to manage all agent information",
+    "guide.steps.selectCollaborativeAgent.title": "Select Collaborative Agent (optional)",
+    "guide.steps.selectCollaborativeAgent.description": "Can help the current agent complete tasks",
     "guide.steps.selectTools.title": "Select Tools",
-    "guide.steps.selectTools.description": "Select tools to use",
+    "guide.steps.selectTools.description": "Agent can call tools to complete tasks",
     "guide.steps.describeBusinessLogic.title": "Describe Business Logic",
-    "guide.steps.describeBusinessLogic.description": "Describe business scenario and requirements",
-    "guide.steps.generateAndDebug.title": "Generate and Debug Agent",
-    "guide.steps.generateAndDebug.description": "Generate intelligent agent and debug",
+    "guide.steps.describeBusinessLogic.description": "Describe your requirements in natural language",
+    "guide.steps.generateAndDebug.title": "Generate and Modify",
+    "guide.steps.generateAndDebug.description": "Adjust agent until it meets expectations",
     "guide.steps.completeCreation.title": "Complete Creation/Modification",
-    "guide.steps.completeCreation.description": "Complete agent creation or modification",
+    "guide.steps.completeCreation.description": "Start using",
     "agent.title": "智能体",
     "agent.name": "Agent Name",
     "agent.namePlaceholder": "Please enter agent name",
@@ -298,6 +298,15 @@
     "systemPrompt.card.duty.title": "Agent Role",
     "systemPrompt.card.constraint.title": "Usage Requirements",
     "systemPrompt.card.fewShots.title": "Few Shots",
+    "systemPrompt.expandEdit.backgroundInfo": "Background Info",
+    "systemPrompt.expandEdit.close": "Save & Close",
+    "systemPrompt.fineTune.title": "Prompt Fine-tuning",
+    "systemPrompt.fineTune.requestLabel": "Tuning Instructions",
+    "systemPrompt.fineTune.requestPlaceholder": "Please enter your specific requirements for optimizing the prompt...",
+    "systemPrompt.fineTune.processing": "Fine-tuning in progress...",
+    "systemPrompt.fineTune.submit": "Start Fine-tuning",
+    "systemPrompt.fineTune.result": "Fine-tuning Result",
+    "systemPrompt.fineTune.saveResult": "Save Fine-tuned Result",
     "systemPrompt.empty.title": "Agent Pending Generation",
     "systemPrompt.empty.subtitle": "Click to generate agent or manually edit (clickable)",
     "systemPrompt.empty.smartGenerate": "Generate Agent",
@@ -682,6 +691,7 @@
     "tool.error.updateRetry": "Failed to update tool status, please try again later",
     "model.option.main": "Main Model",
     "model.option.sub": "Sub Model",
+    "subAgentPool.management": "Agent Management",
     "subAgentPool.title": "Select Agent to Edit",
     "subAgentPool.title.editing": "Currently editing {{name}}",
     "subAgentPool.title.creating": "Currently creating new agent",
@@ -933,7 +943,8 @@
             "removeFailed": "Failed to remove collaborative agent",
             "noParentAgent": "No parent agent available",
             "notInEditMode": "Please enter edit mode first",
-            "generatingInProgress": "Agent generation in progress, please wait"
+            "generatingInProgress": "Agent generation in progress, please wait",
+            "circularDependency": "Circular agent dependency detected"
         }
     }
 }
