--- a/frontend/public/locales/zh/common.json
+++ b/frontend/public/locales/zh/common.json
@@ -263,17 +263,17 @@
     "guide.title.agentConfig": "Agent配置引导",
 
     "guide.steps.createOrEditAgent.title": "新建/修改Agent",
-    "guide.steps.createOrEditAgent.description": "用于进入编辑模式",
-    "guide.steps.selectCollaborativeAgent.title": "选择协作Agent",
-    "guide.steps.selectCollaborativeAgent.description": "选择协作Agent（可选）",
+    "guide.steps.createOrEditAgent.description": "用于管理所有agent信息",
+    "guide.steps.selectCollaborativeAgent.title": "选择协作Agent（可选）",
+    "guide.steps.selectCollaborativeAgent.description": "可以帮助当前agent完成任务",
     "guide.steps.selectTools.title": "选择使用工具",
-    "guide.steps.selectTools.description": "选择使用工具",
+    "guide.steps.selectTools.description": "agent可以调用工具完成任务",
     "guide.steps.describeBusinessLogic.title": "描述业务逻辑",
-    "guide.steps.describeBusinessLogic.description": "描述业务场景和需求",
-    "guide.steps.generateAndDebug.title": "生成智能体并调试",
-    "guide.steps.generateAndDebug.description": "生成智能体并调试",
-    "guide.steps.completeCreation.title": "完成创建或修改",
-    "guide.steps.completeCreation.description": "完成创建或修改",
+    "guide.steps.describeBusinessLogic.description": "通过自然语言描述你的需求",
+    "guide.steps.generateAndDebug.title": "一键生成并调试",
+    "guide.steps.generateAndDebug.description": "调整agent直到符合预期",
+    "guide.steps.completeCreation.title": "完成创建/修改",
+    "guide.steps.completeCreation.description": "开始使用吧",
     "agent.title": "Agent",
     "agent.name": "Agent名称",
     "agent.namePlaceholder": "请输入Agent名称",
@@ -298,6 +298,15 @@
     "systemPrompt.card.duty.title": "Agent角色",
     "systemPrompt.card.constraint.title": "使用要求",
     "systemPrompt.card.fewShots.title": "示例",
+    "systemPrompt.expandEdit.backgroundInfo": "背景信息",
+    "systemPrompt.expandEdit.close": "保存并关闭",
+    "systemPrompt.fineTune.title": "提示词微调",
+    "systemPrompt.fineTune.requestLabel": "微调指令",
+    "systemPrompt.fineTune.requestPlaceholder": "请输入您希望如何优化提示词的具体要求...",
+    "systemPrompt.fineTune.processing": "正在微调中...",
+    "systemPrompt.fineTune.submit": "开始微调",
+    "systemPrompt.fineTune.result": "微调结果",
+    "systemPrompt.fineTune.saveResult": "保存微调结果",
     "systemPrompt.empty.title": "Agent待生成",
     "systemPrompt.empty.subtitle": "点击生成智能体，或者手动编辑（可点击）",
     "systemPrompt.empty.smartGenerate": "生成智能体",
@@ -682,6 +691,7 @@
     "tool.error.updateRetry": "更新工具状态失败，请稍后重试",
     "model.option.main": "主模型",
     "model.option.sub": "副模型",
+    "subAgentPool.management": "Agent管理",
     "subAgentPool.title": "选择Agent进行编辑",
     "subAgentPool.title.editing": "当前正在编辑{{name}}",
     "subAgentPool.title.creating": "当前正在新建agent",
@@ -930,7 +940,8 @@
             "removeFailed": "协作Agent移除失败",
             "noParentAgent": "没有可用的父Agent",
             "notInEditMode": "请先进入编辑模式",
-            "generatingInProgress": "Agent生成中，请稍候"
+            "generatingInProgress": "Agent生成中，请稍候",
+            "circularDependency": "检测到agent存在循环调用"
         }
     },
     "businessLogic.nonEditing.title": "请先进入编辑模式",
