♻️ refactor agent pool display style

--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -712,6 +712,16 @@
     "subAgentPool.tooltip.unavailableAgent": "Agent is unavailable",
     "subAgentPool.tooltip.viewOnlyMode": "View mode, cannot select Agent",
     "subAgentPool.tooltip.notInEditMode": "Please enter edit mode to select agents",
+    "subAgentPool.section.operations": "Operations",
+    "subAgentPool.section.agentList": "Agent List",
+    "subAgentPool.description.exitCreate": "Exit create mode",
+    "subAgentPool.description.createAgent": "Create custom agent",
+    "subAgentPool.description.importing": "Importing...",
+    "subAgentPool.description.importAgent": "Import agent from file",
+    "subAgentPool.tooltip.createNewAgent": "Click to create new Agent",
+    "subAgentPool.tooltip.exitCreateMode": "Click to exit create mode",
+    "subAgentPool.tooltip.exitEditMode": "Click to exit edit mode",
+    "subAgentPool.tooltip.editAgent": "Click to edit",
     "toolPool.title": "Select tools",
     "toolPool.loading": "Loading...",
     "toolPool.loadingTools": "Loading tools...",
