--- a/frontend/public/locales/zh/common.json
+++ b/frontend/public/locales/zh/common.json
@@ -712,6 +712,16 @@
     "subAgentPool.tooltip.unavailableAgent": "Agent不可用",
     "subAgentPool.tooltip.viewOnlyMode": "查看模式，无法选择Agent",
     "subAgentPool.tooltip.notInEditMode": "请先进入编辑模式才能选择Agent",
+    "subAgentPool.section.operations": "操作功能",
+    "subAgentPool.section.agentList": "智能体列表",
+    "subAgentPool.description.exitCreate": "退出创建模式",
+    "subAgentPool.description.createAgent": "创建自定义智能体",
+    "subAgentPool.description.importing": "正在导入中...",
+    "subAgentPool.description.importAgent": "从文件导入智能体",
+    "subAgentPool.tooltip.createNewAgent": "点击创建新Agent",
+    "subAgentPool.tooltip.exitCreateMode": "点击退出创建模式",
+    "subAgentPool.tooltip.exitEditMode": "点击退出编辑模式",
+    "subAgentPool.tooltip.editAgent": "点击编辑",
     "toolPool.title": "选择 Agent 的工具",
     "toolPool.loading": "加载中...",
     "toolPool.loadingTools": "加载工具中...",
