♻️ refactor tool pool: Support hierarchical viewing

--- a/frontend/public/locales/zh/common.json
+++ b/frontend/public/locales/zh/common.json
@@ -732,6 +732,10 @@
     "toolPool.message.viewOnlyMode": "当前为查看模式，无法选择工具",
     "toolPool.tag.mcp": "MCP工具",
     "toolPool.tag.local": "本地工具",
+    "toolPool.group.local": "本地工具",
+    "toolPool.group.langchain": "LangChain",
+    "toolPool.group.other": "其他工具",
+    "toolPool.noTools": "暂无可用工具",
     "toolPool.error.requiredFields": "以下必填字段未填写: {{fields}}",
     "businessLogic.config.title": "配置Agent能力",
     "businessLogic.config.model": "模型",
