--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -732,6 +732,10 @@
     "toolPool.message.viewOnlyMode": "Currently in view mode, cannot select tools",
     "toolPool.tag.mcp": "MCP Tool",
     "toolPool.tag.local": "Local Tool",
+    "toolPool.group.local": "Local",
+    "toolPool.group.langchain": "LangChain",
+    "toolPool.group.other": "Other Tools",
+    "toolPool.noTools": "No tools available",
     "toolPool.error.requiredFields": "The following required fields are not filled: {{fields}}",
     "businessLogic.config.title": "Configure Agent Capabilities",
     "businessLogic.config.model": "Model",
