--- a/frontend/public/locales/zh/common.json
+++ b/frontend/public/locales/zh/common.json
@@ -733,6 +733,7 @@
     "toolPool.message.viewOnlyMode": "当前为查看模式，无法选择工具",
     "toolPool.tag.mcp": "MCP工具",
     "toolPool.tag.local": "本地工具",
+    "toolPool.tag.langchain": "LangChain工具",
     "toolPool.group.local": "本地工具",
     "toolPool.group.langchain": "LangChain",
     "toolPool.group.other": "其他工具",
