--- a/frontend/public/locales/zh/common.json
+++ b/frontend/public/locales/zh/common.json
@@ -552,6 +552,8 @@
     "model.dialog.label.apiKey": "API Key",
     "model.dialog.label.vectorDimension": "向量维度",
     "model.dialog.label.maxTokens": "最大Token数",
+    "model.dialog.label.batchImport": "批量添加模型",
+    "model.dialog.label.provider": "模型提供商",
     "model.dialog.label.currentlySupported": "当前已支持：",
     "model.dialog.placeholder.name": "请输入请求体中的模型名称",
     "model.dialog.placeholder.displayName": "请输入模型的展示名称",
@@ -562,10 +564,16 @@
     "model.dialog.placeholder.maxTokens": "请输入最大Token数",
     "model.dialog.hint.multimodalEnabled": "多模态向量模型可处理图像和文本",
     "model.dialog.hint.multimodalDisabled": "文本向量模型仅处理文本",
+    "model.dialog.hint.batchImportEnabled": "批量添加模式已启用，可通过apiKey一次性导入多个模型",
+    "model.dialog.hint.batchImportDisabled": "批量添加模式已关闭，仅添加单个模型",
+    "model.provider.silicon": "硅基流动",
+    "model.provider.local": "本地部署",
+    "model.dialog.modelList.title": "显示模型",
     "model.dialog.connectivity.title": "连通性验证",
     "model.dialog.connectivity.status.checking": "检测中",
     "model.dialog.connectivity.status.available": "可用",
     "model.dialog.connectivity.status.unavailable": "不可用",
+    "model.dialog.button.modelList": "获取模型",
     "model.dialog.button.verify": "点击验证",
     "model.dialog.button.verifying": "验证中...",
     "model.dialog.button.add": "添加",
@@ -579,7 +587,9 @@
     "model.dialog.error.verificationError": "验证连通性失败：{{error}}",
     "model.dialog.error.addFailed": "添加模型失败：{{error}}",
     "model.dialog.error.addFailedLog": "添加模型失败",
+    "model.dialog.message.noModels": "请先获取模型",
     "model.dialog.error.invalidVectorDimension": "请输入大于0的整数",
+    "model.type.all": "全部模型",
     "model.type.llm": "大语言模型",
     "model.type.embedding": "向量化模型",
     "model.type.vlm": "视觉语言模型",
@@ -890,5 +900,7 @@
         "noAvailableAgents": "暂无可用Agent",
         "unavailable": "不可用",
         "agentUnavailable": "此Agent当前不可用，请检查工具配置信息或通知管理员。"
-    }
+    },
+    "model.dialog.success.addBatchModel": "批量添加模型成功！",
+    "model.dialog.error.addBatchModel": "批量添加模型失败：{{message}}"
 }
